# sec-password-policy-analyzer

./: .coverage  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
data/: common_passwords_sample.txt
examples/: policy.example.toml
password_policy_analyzer/: __init__.py  analyzer.py  cli.py  config.py  policy.py  weak_passwords.py
sec_password_policy_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_analyzer.py  test_cli_json.py  test_policy_rules.py
web/: app.js  index.html  styles.css
