[project]
name = "password-policy-analyzer"
version = "0.1.0"
description = "Educational tool to analyze passwords against configurable security policies."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]

[project.scripts]
password-policy-analyzer = "password_policy_analyzer.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
